@@ -17,4 +17,5 @@
 \def\zwhp#1{\pt{#1}\zwh{#1}}
 \def\zqbp#1#2{\pt{#2}\zqb{#1}{#2}}
 \def\qpp{\pt 4\qp} % don't move with \transpose
+\def\nr#1{\zcharnote{8}{\lower-1pt\vbox{\eightbf#1}}}
 
