@@ -12,6 +12,8 @@ New features
 
 - Articulations: accent, staccato and fermata.
 
+- Multiple measures lasting rests are now supported.
+
 Bugs fixed
 ----------
 
